[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/Interface/Interface_menu_load_game_profil.gd" type="Script" id=1]

[node name="Interface_menu_load_game_profil" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Button_exit" type="Button" parent="."]
margin_left = 59.0
margin_top = 34.0
margin_right = 301.0
margin_bottom = 143.0
text = "EXIT"

[node name="Button_profil_1" type="Button" parent="."]
margin_left = 39.0
margin_top = 224.0
margin_right = 266.0
margin_bottom = 318.0
text = "PROFIL_1"

[node name="Button_profil_2" type="Button" parent="."]
margin_left = 343.0
margin_top = 197.0
margin_right = 558.0
margin_bottom = 304.0
text = "PROFIL_2"

[node name="Button_profil_3" type="Button" parent="."]
margin_left = 663.0
margin_top = 187.0
margin_right = 882.0
margin_bottom = 306.0
text = "PROFIL_3"

[node name="Button_profil_1_ngp" type="Button" parent="."]
margin_left = 42.0
margin_top = 360.0
margin_right = 274.0
margin_bottom = 451.0
text = "PROFIL_1_NGP"

[node name="Button_profil_2_ngp" type="Button" parent="."]
margin_left = 333.0
margin_top = 341.0
margin_right = 570.0
margin_bottom = 453.0
text = "PROFIL_2_NGP"

[node name="Button_profil_3_ngp" type="Button" parent="."]
margin_left = 644.0
margin_top = 348.0
margin_right = 888.0
margin_bottom = 464.0
text = "PROFIL_3_NGP"

[connection signal="pressed" from="Button_exit" to="." method="_on_Button_exit_pressed"]
[connection signal="pressed" from="Button_profil_1" to="." method="_on_Button_profil_1_pressed"]
[connection signal="pressed" from="Button_profil_2" to="." method="_on_Button_profil_2_pressed"]
[connection signal="pressed" from="Button_profil_3" to="." method="_on_Button_profil_3_pressed"]
